react-vite/src/components/ProductPage/ProductPage.css
.productPage > .container {
  display: flex;
  flex-direction: column;
  gap: 20px;
  padding: 20px 0;
  * {
    color: brown;
  }
}

.h-linebreak {
  width: 100%;
  border-bottom: 1px solid lightcoral;
  padding-bottom: 5px;
  margin-bottom: 5px;
}

.product-main {
  display: flex;
  justify-content: space-between;
  gap: 30px
}

.product-main > .left {
  display: flex;
  width: 100%;
  flex-direction: column;
  gap: 10px;
}

.product-main > .right {
  width: 100%
}

.image-container {
  display: flex;
  align-items: center;
  min-height: 500px;
  max-width: 500px;
  max-height: 500px;
  width: 100%
}

.image-container > img {
  border-radius: 10px;
  width: 100%;
  max-height: 100%;
}

.product-image-carousel {
  display: flex;
  gap: 10px;
}

.carousel-image {
  width: 50px;
  height: 50px;
  cursor: pointer;
  > img {
    border-radius: 5px;
    width: 100%;
    height: 100%;
  };
}

.short-details {
  :is(h1) {
    color: brown
  }
}

.quantity {
  display: flex;
  justify-content: space-between;
  gap: 5px;
  :is(input){
    width: 30px;
    padding: 5px
  }
}

.color {
  display: flex;
  justify-content: space-between;
  gap: 5px;
  :is(select){
    width: 200px;
    padding: 5px
  }
}

.right > .selection {
  padding: 20px 0;
  display: flex;
  flex-direction: column;
  gap: 10px;
  width: 60%;
}

.right > .selection > button {
  color: white;
  box-shadow: 2px 2px 4px black;
  background-color: brown;
  border: 2px solid lightcoral;
  border-radius: 15px;
  padding: 5px;
  cursor: pointer;
}

.product-reviews > .header {
  display: flex;
  justify-content: space-between;
  align-items: end;
}

.product-reviews .review-button {
  box-shadow: 2px 2px 4px black;
  background-color: brown;
  border: 1px solid lightcoral;
  padding: 2px 5px;
  color: white
}

.product-reviews > form {
  display: flex;
  flex-direction: column;
  gap: 5px;
  /* align-items: center; */
  overflow: hidden;
  width: 100%;
  padding: 10px 0;
  :is(textarea){
    min-height: 60px;
    padding: 5px

  }
}

.review-container {
  background-color: white;
  border: 2px solid lightcoral;
  display: flex;
  flex-direction: column;
  gap: 10px;
  padding: 10px;
  height: 250px;
  overflow-y: auto;
  scrollbar-color: lightcoral;
  scrollbar-width: thin;
  scroll-behavior: auto;
}

.review-container > .review {
  background-color: lightcoral;
  border: 1px solid brown;
  border-radius: 15px;
  padding: 5px 20px;
  > .heading {
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 20px;
  }
  * {
    color: white
  }
}

.reviewer-buttons {
  display: flex;
  gap: 5px;
}
.user.reviewer-buttons > .review-button {
  font-size: 10px;
}

.review-rating {
  display: flex;
  gap: 5px;
  cursor: pointer;
}

.review-button {
  cursor: pointer;
  user-select: none;
}


.review-left {
  display: flex;
  gap: 10px;
  align-items: center;
}

.review-form > :is(textarea) {
  border: 2px solid lightcoral;
}

.review-form .errors {
  font-size: 0.8em;
}

.no-review {
  color: red;
}

